RESOLVED FIXED193097
IndexedDB: leak WebIDBConnectionToClient for retain cycle
https://bugs.webkit.org/show_bug.cgi?id=193097
Summary IndexedDB: leak WebIDBConnectionToClient for retain cycle
Sihui Liu
Reported 2019-01-02 17:29:12 PST
WebIDBConnectionToClient and NetworkConnectionToWebProcess have reference to each other.
Attachments
Patch (15.64 KB, patch)
2019-01-03 12:52 PST, Sihui Liu
no flags
Patch for landing (15.91 KB, patch)
2019-01-11 12:38 PST, Sihui Liu
no flags
Patch (7.18 KB, patch)
2019-01-15 20:02 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-01-02 17:29:57 PST
Sihui Liu
Comment 2 2019-01-03 12:52:54 PST
Sihui Liu
Comment 3 2019-01-11 12:38:36 PST
Created attachment 358930 [details] Patch for landing
WebKit Commit Bot
Comment 4 2019-01-11 17:12:05 PST
Comment on attachment 358930 [details] Patch for landing Clearing flags on attachment: 358930 Committed r239887: <https://trac.webkit.org/changeset/239887>
WebKit Commit Bot
Comment 5 2019-01-11 17:12:06 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 6 2019-01-14 15:25:21 PST
It appears that the changes in https://trac.webkit.org/changeset/239887/webkit caused another API failure and Timeout. These are only present on Debug TestWebKitAPI.IndexedDB.IndexedDBMultiProcess _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. /Volumes/Data/worker/liberty-debug-archive/build/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/IndexedDBMultiProcess.mm:113 Expected equality of these values: @"Deleted!" Which is: "Deleted!" string7.get() Which is: "Unexpected error opening database" Timeout TestWebKitAPI.IndexedDB.WebProcessKillIDBCleanup Log: https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK2%20%28Tests%29/builds/6187/steps/run-api-tests/logs/stdio Confirmed using: run-api-tests --no-build --debug --root debug-239887
Sihui Liu
Comment 7 2019-01-15 19:55:59 PST
Caused some API tests to fail.
Sihui Liu
Comment 8 2019-01-15 20:02:39 PST
David Kilzer (:ddkilzer)
Comment 9 2019-01-16 01:31:57 PST
Comment on attachment 359249 [details] Patch r=me
WebKit Commit Bot
Comment 10 2019-01-16 09:11:53 PST
Comment on attachment 359249 [details] Patch Clearing flags on attachment: 359249 Committed r240039: <https://trac.webkit.org/changeset/240039>
WebKit Commit Bot
Comment 11 2019-01-16 09:11:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.