Source/WebCore/Modules/indexeddb/server/IDBConnectionToClient.h
@@ -31,6 +31,7 @@
 #include <wtf/HashSet.h>
 #include <wtf/Ref.h>
 #include <wtf/RefCounted.h>
+#include <wtf/WeakPtr.h>
 
 namespace WebCore {
 
@@ -82,7 +83,7 @@ public:
 private:
     IDBConnectionToClient(IDBConnectionToClientDelegate&);
     
-    Ref<IDBConnectionToClientDelegate> m_delegate;
+    WeakPtr<IDBConnectionToClientDelegate> m_delegate;
     HashSet<UniqueIDBDatabaseConnection*> m_databaseConnections;
 };
 
